Fixed some overlap, still has minor horizontal scrolling

--- a/src/App.scss
+++ b/src/App.scss
@@ -44,7 +44,7 @@ body {
 }
 
 #main-container {
-  padding: 1.15em;
+  padding: 1.15em 4.18em 1.15em 1.15em;
 }
 
 * {
