--- a/src/settings/Settings.scss
+++ b/src/settings/Settings.scss
@@ -4,7 +4,7 @@
     overflow-y: scroll;
     display: flex;
     flex-direction: column;
-    margin: 8em 6em 3em 6em;
+    margin: 1em 6em 3em 6em;
     align-items: flex-start;
 
     .SettingsItem {
